add new tests to cover branching, remove result != null state in OperationRepositoryImpl (jpql already use coalesce, so it's always return bigdecimal)